revert navigation menu

--- a/config.toml
+++ b/config.toml
@@ -31,15 +31,15 @@ name = "Google Scholar"
 icon = "book-open"
 url = "https://scholar.google.com/citations?user=RULta1sAAAAJ&hl=en"
 
-#[[menu.main]]
-#name = "Home"
-#url = "/"
-#weight = 1
+[[menu.main]]
+name = "Home"
+url = "/"
+weight = 1
 
-#[[menu.main]]
-#name = "All posts"
-#url = "/posts"
-#weight = 2
+[[menu.main]]
+name = "Posts"
+url = "/posts"
+weight = 2
 
 #[[menu.main]]
 #name = "About"
