Remove www from base URL

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.farshid.ws/"
+baseURL = "https://farshid.ws/"
 languageCode = "en-us"
 title = "Farshid Tavakolizadeh"
 theme="archie"
